# 3rd_project

./: .gitignore
TC375/BSW/Driver/: can.c  can.h
joystick_rasp/: bluetooth.py  controller.py  main.py
joystick_rasp/reference_1stpjt/: bluetooth_reference.py  controller_reference.py  joystick_reference.py
vc_software/: README.md
vc_software/apps/digital_key/: .gitignore  README.md  digital_key_service.py  requirements.txt  vehicle_identity.txt
vc_software/apps/digital_key/digital_key/: __init__.py  certificates.py  chunks.py  command_handler.py  config.py  identity.py  ipc_client.py  key_store.py  pairing.py  pairing_client.py  pki.py  vehicle_ble.py
vc_software/apps/digital_key/keys/: device_cert.pem  vehicle_private.pem  vehicle_public.pem
vc_software/apps/digital_key/scripts/: auto_pair_agent.py  enable_pairing.py  generate_vehicle_cert.py  init_vehicle.sh  (+7 more)
vc_software/apps/opencv/: __init__.py  calibrate_lane.py  calibration.json  calibration.py  image_capture.py  lane_analyzer.py  main.py  pipeline.py  reporter.py
vc_software/apps/ota/: config.py  confirm_update.py  ipc_client.py  ota_bridge.py  ota_service.py  utils.py  versions.json
vc_software/apps/realtime/: CMakeLists.txt  comm_thread.cpp  config.h  control_thread.cpp  ipc_server.cpp  joystick_thread.cpp  lkas_thread.cpp  main.cpp  readme.md  sensor_thread.cpp  shared.cpp  shared.h  vc_common.h  vsomeip.json  vsomeip_manager.cpp  vsomeip_manager.h
vc_software/apps/realtime/reference_1stpj/: AEB.c  AEB.h  APS.c  APS.h  ccu.c  ccu.h
vc_software/apps/ui/: terminal_ui.py
vc_software/systemd/: vc-digital-key.service  vc-ota-bridge.service  vc-ota.service  vc-realtime.service  vc-test.service
vsomeip/: readme.md
(+33 files in other folders)
